add comments under hover for resetpoints

--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,7 @@
                                 size: 10
                             },
                             hovertext: `Reset: ${data.date}, Portfolio Value: $100,000`
+                            // Add what value it was reset from and whats the total available cash as an option 
                         });
 
                         action = 'Reset';
