--- a/index.html
+++ b/index.html
@@ -1311,49 +1311,48 @@
                         // Store the previous portfolio value before reset
                         const previousPortfolioValue = modelDPortfolioValue;
 
-                        // **Calculate the adjustment needed to reset the portfolio value to $100,000**
+                        // Determine if the reset is due to a drop or a rise
+                        const resetDueToDrop = modelDPortfolioValue <= lowerBound;
+
+                        // Calculate the adjustment needed to reset the portfolio value to initial value
                         const adjustment = totalPortfolioValue - modelDPortfolioValue;
 
-                        // **Adjust modelDCash to reflect the injection or withdrawal of funds**
+                        // Adjust modelDCash to reflect the injection or withdrawal of funds
                         modelDCash += adjustment;
 
                         // Sell all investments
-                        modelDCash += modelDInvestments.reduce((sum, inv) => sum + inv.shares * data.price, 0);
+                        const saleProceeds = modelDInvestments.reduce((sum, inv) => sum + inv.shares * data.price, 0);
+                        modelDCash += saleProceeds;
+                        modelDInvestments = [];
 
-                        // Allocate according to the cashPercent
-                        let investmentAmount = modelDCash * (1 - cashPercent);
-                        modelDCash = modelDCash * cashPercent;
+                        // Calculate investment amount based on cashPercent
+                        const investmentAmount = modelDCash * (1 - cashPercent);
+
+                        // Deduct investment amount from modelDCash
+                        modelDCash -= investmentAmount;
 
                         // Buy new investments
-                        modelDInvestments = [{ buyPrice: data.price, shares: investmentAmount / data.price }];
+                        const sharesToBuy = investmentAmount / data.price;
+                        modelDInvestments.push({ buyPrice: data.price, shares: sharesToBuy });
 
                         // Recalculate portfolio value
-                        modelDPortfolioValue = modelDCash + modelDInvestments[0].shares * data.price;
+                        modelDPortfolioValue = modelDCash + sharesToBuy * data.price;
 
+                        // Set marker properties based on whether reset is due to drop or rise
+                        const markerProperties = resetDueToDrop
+                            ? { color: 'red', symbol: 'triangle-down', size: 15 }
+                            : { color: 'green', symbol: 'triangle-up', size: 15 };
+
+                        // Push the reset point with the updated marker properties
                         resetPoints.push({
                             x: dataDate,
                             y: modelDPortfolioValue,
-                            marker: {
-                                color: 'green',
-                                symbol: 'triangle-up',
-                                size: 15,
-                            },
+                            marker: markerProperties,
                             hovertext: `Reset on ${data.date}:<br>Portfolio Value Before Reset: $${previousPortfolioValue.toFixed(2)}<br>Adjusted Portfolio Value: $${modelDPortfolioValue.toFixed(2)}<br>Remaining Cash: $${modelDCash.toFixed(2)}`
                         });
 
                         action = 'Reset';
                     }
-
-                    // Update totalValue for Model D
-                    // totalValue = modelDPortfolioValue;
-
-                    // Add Model D portfolio values
-                    totalPortfolioValues.push({ x: dataDate, y: totalValue });
-                    totalCashValues.push({ x: dataDate, y: modelDCash });
-                } else {
-                    // Add portfolio values for other models
-                    totalPortfolioValues.push({ x: dataDate, y: totalValue });
-                    totalCashValues.push({ x: dataDate, y: cash });
                 }
 
                 // Calculate drop from current peak
@@ -1551,7 +1550,7 @@
 
                 // **Rest of the calculateResults function remains the same**
                 // Calculate portfolio values after buy/sell logic
-                activeInvestmentValue = cash + activeInvestments.reduce((sum, inv) => sum + inv.shares * price, 0);
+                // activeInvestmentValue = cash + activeInvestments.reduce((sum, inv) => sum + inv.shares * price, 0);
 
                 const passiveProfit = (price - passiveInvestmentPrice) * passiveShares;
                 const activeProfit = totalProfit + activeInvestments.reduce((sum, inv) => sum + inv.shares * price, 0);
@@ -1569,14 +1568,16 @@
                 if (selectedModel === 'modelD') {
                     const modelDInvestmentValue = modelDInvestments.reduce((sum, inv) => sum + inv.shares * data.price, 0);
                     totalValue = modelDCash + modelDInvestmentValue;
+                    totalCashValues.push({ x: dataDate, y: modelDCash });
                 } else {
-                    const activeInvestmentValue = activeInvestments.reduce((sum, inv) => sum + inv.shares * data.price, 0);
-                    const passiveInvestmentValue = passiveShares * data.price;
+                    // Do not redeclare variables; just assign values
+                    activeInvestmentValue = activeInvestments.reduce((sum, inv) => sum + inv.shares * data.price, 0);
+                    passiveInvestmentValue = passiveShares * data.price;
                     totalValue = activeInvestmentValue + passiveInvestmentValue + cash;
+                    totalCashValues.push({ x: dataDate, y: cash });
                 }
 
                 totalPortfolioValues.push({ x: dataDate, y: totalValue });
-                totalCashValues.push({ x: dataDate, y: (selectedModel === 'modelD' ? modelDCash : cash) });
 
                 // Modify the transaction log to store the new price fields
                 transactionLog.push({
